# docs/swagger.json
@@ -88,6 +88,102 @@
                 }
             }
         },
+        "/categories/{id}": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Memperbarui nama atau ikon kategori milik user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Edit Kategori",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID Kategori",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Data Kategori Baru",
+                        "name": "request",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CreateCategoryRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.SuccessResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Menghapus kategori secara permanen",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Categories"
+                ],
+                "summary": "Hapus Kategori",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "ID Kategori",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/domain.SuccessResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/domain.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/flashcards/generate": {
             "post": {
                 "security": [
@@ -1132,8 +1228,6 @@
         "dto.CreateWordRequest": {
             "type": "object",
             "required": [
-                "native_word",
-                "part_of_speech",
                 "targets"
             ],
             "properties": {
@@ -1151,15 +1245,17 @@
                     }
                 },
                 "native_word": {
+                    "description": "Hapus binding:\"required\"",
                     "type": "string"
                 },
                 "part_of_speech": {
+                    "description": "Hapus binding:\"required\"",
                     "type": "string"
                 },
                 "targets": {
+                    "description": "Array-nya wajib ada, tapi isinya boleh kosong",
                     "type": "array",
                     "maxItems": 2,
-                    "minItems": 1,
                     "items": {
                         "$ref": "#/definitions/dto.WordTargetReq"
                     }
@@ -1587,8 +1683,6 @@
         "dto.UpdateWordRequest": {
             "type": "object",
             "required": [
-                "native_word",
-                "part_of_speech",
                 "targets"
             ],
             "properties": {
@@ -1606,15 +1700,16 @@
                     }
                 },
                 "native_word": {
+                    "description": "Hapus binding:\"required\"",
                     "type": "string"
                 },
                 "part_of_speech": {
+                    "description": "Hapus binding:\"required\"",
                     "type": "string"
                 },
                 "targets": {
                     "type": "array",
                     "maxItems": 2,
-                    "minItems": 1,
                     "items": {
                         "$ref": "#/definitions/dto.WordTargetReq"
                     }
@@ -1746,14 +1841,15 @@
         "dto.WordTargetReq": {
             "type": "object",
             "required": [
-                "language_code",
-                "target_word"
+                "language_code"
             ],
             "properties": {
                 "language_code": {
+                    "description": "Language code tetap wajib agar tahu bendera apa yang ditampilkan",
                     "type": "string"
                 },
                 "target_word": {
+                    "description": "Hapus binding:\"required\"",
                     "type": "string"
                 }
             }
